--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
           <h3>Taijiquan stile Chen</h3>
           <hr>
           <p>L'esercizio del Taijiquan si è diffuso in tutto il mondo per i suoi movimenti lenti, fluidi, continui ed armoniosi
-            che favoriscono l’accumulo e la corretta circolazione dell’energia vitale, aiutando così il praticante a mantenere
-            e rafforzare la propria salute psico-fisica...
+            che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
             <br> [
             <a href="#">Per saperne di più</a>]
           </p>
