major style changes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,23 @@
             <a class="nav-link js-scroll-trigger" href="#about">Chi siamo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Il maestro</a>
+            <a class="nav-link js-scroll-trigger" href="#maestro">Il maestro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">I corsi</a>
+            <a class="nav-link js-scroll-trigger" href="#corsi">I corsi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contacts">Contatti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
           </li>
         </ul>
       </div>
@@ -52,7 +65,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h1 class="brand-heading">ITKA PISA</h1>
-            <p class="intro-text">International Taijiquan Kung-Fu Association Pisa</p>
+            <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
             <a href="#about" class="btn btn-circle js-scroll-trigger">
               <i class="fa fa-angle-double-down animated"></i>
             </a>
@@ -68,6 +81,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Chi siamo</h2>
+          <hr>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quod aspernatur ad sapiente saepe maxime, et ipsum maiores
             culpa officiis repudiandae vero esse? Assumenda fugit accusantium, expedita tempora quae ullam!
@@ -78,108 +92,141 @@
     </div>
   </section>
 
-  <!-- Download Section -->
-  <section id="download" class="download-section content-section text-center">
+  <!-- Maestro Section -->
+  <section id="maestro" class="maestro-section content-section text-center">
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
+        <hr>
         <strong>Gabriele Finocchiaro</strong> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
         Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
         secondo livello taijiquan ITKA e Allenatore II Duan di Taijiquan F.I.Wu.K.
         </p>
-        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Full Bio</a>
+
+        <a class="btn btn-default btn-lg" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
+          <i class="fa fa-level-down" aria-hidden="true"></i>
+        </a>
+        <div class="collapse multi-collapse my-2" id="riconoscimenti">
+          <div class="card card-body">
+            <ul>
+              <li>Kuoshu, 3° classificato, campionati europei E.C.K.F., 2011</li>
+              <li>Tui Shou – piedi fissi, 1° classificato, mondiali W.T.K.A., 2012</li>
+              <li>Tui Shou – piedi fissi, 1° classificato // Tui Shou libero, 2° classificato // Tao Lou, 2° class. UNIFIED WORLD
+                CHAMPIONSHIP W.T.K.A. 2014</li>
+              <li>Tao Lou mani nude, 1° class.; Tao Lou arma lunga, 1° class.; Campionati regionali W.T.K.A. 2015</li>
+              <li>Tao Lou 2° class. Coppa Italia F.I.Wu.K., 2018</li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="content-section text-center">
+  <!-- Corsi Section -->
+  <section id="corsi" class="content-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
           <h2>I Corsi</h2>
+          <hr>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <h3>Taijiquan stile Chen</h3>
-          <hr>
+          <h3 class="title-frame p-2">Taijiquan stile Chen</h3>
+
           <p>L'esercizio del Taijiquan si è diffuso in tutto il mondo per i suoi movimenti lenti, fluidi, continui ed armoniosi
             che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
-            <br> [
-            <a href="#">Per saperne di più</a>]
+            <br>
+            <br>
+            <a class="btn btn-default" href="#">Per saperne di più
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
           </p>
         </div>
 
         <div class="col-lg-6">
-          <h3>Kung Fu di Chenjiagou</h3>
-          <hr>
+          <h3 class="title-frame p-2">Kung Fu di Chenjiagou</h3>
+
           <p>Il programma denominato “Kung Fu di Chenjiagou” è stato codificato formalmente nel Dicembre del 2002 dal Maestro
             Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
-            <br> [
-            <a href="#">Per saperne di più</a>]
+            <br>
+            <br>
+            <a class="btn btn-default p-2" href="#">Per saperne di più
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
           </p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
-          <h3>Qi Gong</h3>
-          <hr>
+          <h3 class="title-frame p-2">Qi Gong</h3>
           <p>Il Qi gong (lavoro sull’energia) è stato in epoche antiche parte essenziale della ricerca della longevità e del
             benessere psicofisico. L’abbondanza di Qi nell’uomo è il fattore energetico fondamentale per vincere le malattie
             e per godere di buona salute...
-            <br> [
-            <a href="#">Per saperne di più</a>]
+            <br>
+            <br>
+            <a class="btn btn-default" href="#">Per saperne di più
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
           </p>
         </div>
         <div class="col-lg-6">
-          <h3>Difesa Personale</h3>
-          <hr>
+          <h3 class="title-frame p-2">Difesa Personale</h3>
           <p>Il Taijiquan Self Defence System è un sistema di auto difesa pratico, basato sui principi fondamentali che provengono
             dal Taijiquan. Il TSD interessa sopratutto chi non ha mai praticato arti marziali ma vuole intraprendere un percorso
             serio nell’autodifesa...
-            <br> [
-            <a href="#">Per saperne di più</a>]
+            <br>
+            <br>
+            <a class="btn btn-default" href="#">Per saperne di più
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
           </p>
         </div>
-
-
       </div>
     </div>
   </section>
 
-  <!-- Map Section -->
+  <!-- Contacts Section -->
   <section id="contacts">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
-            <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
-            </p>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="section-heading">Contatti</h2>
+          <hr class="my-4">
+          <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su
+            <a class="btn btn-default mt-2" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
+              <strong>
+                <i class="fa fa-facebook" aria-hidden="true"></i>acebook
+                <i class="fa fa-external-link" aria-hidden="true"></i>
+              </strong>
+              .</a>
+          </p>
+          <p class="mb-5">Contatta il maestro per scoprire il corso più adatto alle tue esigenze e iniziare subito ad allenarti! Le prime
+            lezioni sono gratuite e senza alcun impegno.</p>
         </div>
       </div>
-    </section>
+      <div class="row">
+        <div class="col-lg-4 ml-auto text-center">
+          <i class="fa fa-whatsapp fa-3x mb-3 sr-contact"></i>
+          <p>123-456-6789</p>
+        </div>
+        <div class="col-lg-4 mr-auto text-center">
+          <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+          <p>
+            <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; Your Website 2018</p>
+      <p>Copyright &copy; ITKA PISA 2018</p>
     </div>
   </footer>
 
