Major Style Changes; Content Edits

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.min.css">
 </head>
 
 <body id="page-top">
@@ -64,10 +65,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="brand-heading">ITKA PISA</h1>
+            <h1 class="brand-heading ">ITKA PISA</h1>
             <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
-            <a href="#about" class="btn btn-circle js-scroll-trigger">
-              <i class="fa fa-angle-double-down animated"></i>
+            <a href="#about" class="btn btn-circle js-scroll-trigger p-1 animated pulse infinite">
+              <i class="fa fa-angle-double-down"></i>
             </a>
           </div>
         </div>
@@ -83,10 +84,14 @@
           <h2>Chi siamo</h2>
           <hr>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quod aspernatur ad sapiente saepe maxime, et ipsum maiores
-            culpa officiis repudiandae vero esse? Assumenda fugit accusantium, expedita tempora quae ullam!
+            ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen. L'associazione è gestita dal maestro Gabriele Finocchiaro, 
+            che si occupa dei corsi e da un personaggio anonimo, se volete oscuro, che si occupa della sponsorizzazione del progetto. 
           </p>
-
+          
+          <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
+          <img src="img/toscana.png" width="240" height="90" alt="fiwuk logo" class="img-fluid">
+          <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
+          <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid">
         </div>
       </div>
     </div>
@@ -191,18 +196,18 @@
 
   <!-- Contacts Section -->
   <section id="contacts">
-    <div class="container">
+    <div class="container content-section">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Contatti</h2>
           <hr class="my-4">
           <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su
-            <a class="btn btn-default mt-2" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
+            <a class="btn btn-default mt-4" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
                 <i class="fa fa-facebook" aria-hidden="true"></i>acebook
                 <i class="fa fa-external-link" aria-hidden="true"></i>
               </strong>
-              .</a>
+            </a>
           </p>
           <p class="mb-5">Contatta il maestro per scoprire il corso più adatto alle tue esigenze e iniziare subito ad allenarti! Le prime
             lezioni sono gratuite e senza alcun impegno.</p>
@@ -211,12 +216,12 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fa fa-whatsapp fa-3x mb-3 sr-contact"></i>
-          <p>123-456-6789</p>
+          <p>(+39) 348-523-3039</p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
           <p>
-            <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+            <a href="mailto:your-email@your-domain.com">gfinocchiaro92@gmail.com</a>
           </p>
         </div>
       </div>
