--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
           <h2>Chi siamo</h2>
           <hr>
           <p>
-            ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen. L'associazione è gestita dal maestro Gabriele Finocchiaro, 
-            che si occupa dei corsi e da un personaggio anonimo, se volete oscuro, che si occupa della sponsorizzazione del progetto. 
+            ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen.
+            L'associazione è gestita dal maestro Gabriele Finocchiaro, che si occupa dei corsi e da un personaggio anonimo,
+            se volete oscuro, grasso, unto, sudato, che non ha mai fatto uno sport in vita sua e che si getterebbe dall'ultimo
+            piano della Trump Tower piuttosto che svegliarsi alle 5 del mattino per andare a fare jogging che si occupa della
+            sponsorizzazione del progetto.
           </p>
-          
+
           <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
           <img src="img/toscana.png" width="240" height="90" alt="fiwuk logo" class="img-fluid">
           <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
