--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen.
             L'associazione è gestita dal maestro Gabriele Finocchiaro, che si occupa dei corsi e da un personaggio anonimo,
             se volete oscuro, grasso, unto, sudato, che non ha mai fatto uno sport in vita sua e che si getterebbe dall'ultimo
-            piano della Trump Tower piuttosto che svegliarsi alle 5 del mattino per andare a fare jogging che si occupa della
+            piano della Trump Tower piuttosto che svegliarsi alle 5 del mattino per andare a fare jogging, che si occupa della
             sponsorizzazione del progetto.
           </p>
 
