fun edits (remove)

--- a/index.html
+++ b/index.html
@@ -85,16 +85,26 @@
           <hr>
           <p>
             ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen.
-            L'associazione è gestita dal maestro Gabriele Finocchiaro, che si occupa dei corsi e da un personaggio anonimo,
+            L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e da un personaggio anonimo,
             se volete oscuro, grasso, unto, sudato, che non ha mai fatto uno sport in vita sua e che si getterebbe dall'ultimo
             piano della Trump Tower piuttosto che svegliarsi alle 5 del mattino per andare a fare jogging, che si occupa della
             sponsorizzazione del progetto.
+            <br>
+            <br>
+            Il Taijiquan è uno sport meraviglioso, adatto a giovani, adulti, bambini, vecchi - e se ci pagate - lo insegnamo pure a cani, gatti, animali da compagnia e ai pesci dell'acquario. 
+            Il praticante di Taijiquan (pronuncia 'Tai-scisciuàn') acquisisce nel tempo inestimabili benefici per il corpo e per lo spirito. 
+            In particolare il praticante avvertirà già dalle prime lezione una dilatazione di tutti i fori energetici principali, in particolare all'uscita energetica sfintero-rettale.
+            Inoltre, se coadiuvata dalla regolare assunzione di supposte di Bach, la pratica del Taijiquan garantisce una percentuale di radicali liberi al di sotto del 3%, e quindi fuori dal parlamento. 
+            <br>
+            <br>
+            In sintesi, o non esistono buone ragioni per non praticare Tai-scisciùan o sono scritte in dei libri, e allora non lo sapremo mai. 
+            <blockquote>  - Sun Tzu, 4999 BBC</blockquote> 
           </p>
 
-          <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
-          <img src="img/toscana.png" width="240" height="90" alt="fiwuk logo" class="img-fluid">
-          <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid">
-          <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid">
+          <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
+          <img src="img/toscana.png" width="240" height="90" alt="fiwuk logo" class="img-fluid p-2 my-2">
+          <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
+          <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-2">
         </div>
       </div>
     </div>
@@ -148,7 +158,7 @@
             che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
             <br>
             <br>
-            <a class="btn btn-default" href="#">Per saperne di più
+            <a class="btn btn-default" href="http://www.itkataiji.com/taijiquan-classico/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -161,7 +171,7 @@
             Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
             <br>
             <br>
-            <a class="btn btn-default p-2" href="#">Per saperne di più
+            <a class="btn btn-default p-2" href="http://www.itkataiji.com/kungfu-di-chenjiagou/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -170,13 +180,13 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="title-frame p-2">Qi Gong</h3>
+          <h3 class="title-frame p-2" target="_blank">Qi Gong</h3>
           <p>Il Qi gong (lavoro sull’energia) è stato in epoche antiche parte essenziale della ricerca della longevità e del
             benessere psicofisico. L’abbondanza di Qi nell’uomo è il fattore energetico fondamentale per vincere le malattie
             e per godere di buona salute...
             <br>
             <br>
-            <a class="btn btn-default" href="#">Per saperne di più
+            <a class="btn btn-default" href="http://www.itkataiji.com/qi-gong/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -188,7 +198,7 @@
             serio nell’autodifesa...
             <br>
             <br>
-            <a class="btn btn-default" href="#">Per saperne di più
+            <a class="btn btn-default" href="http://www.itkataiji.com/tsd-system/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
