--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <br>
             In sintesi, o non esistono buone ragioni per non praticare Tai-scisciùan o sono scritte in dei libri, e allora non lo sapremo mai. 
             <blockquote>  - Sun Tzu, 4999 BBC</blockquote> 
+            <img src="img/parenzo.jpg" width="250" alt="PENTITI PARENZOOOOOOOOOOOOOOOOOOOO">
           </p>
 
           <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
