facebook button br added

--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
           <h2 class="section-heading">Contatti</h2>
           <hr class="my-4">
           <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su
+            <br>
             <a class="btn btn-default mt-4" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
                 <i class="fa fa-facebook" aria-hidden="true"></i>acebook
@@ -233,7 +234,7 @@
           <p>(+39) 348-523-3039</p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+          <i class="fa fa-envelope-o fa-3x my-2 sr-contact"></i>
           <p>
             <a href="mailto:your-email@your-domain.com">gfinocchiaro92@gmail.com</a>
           </p>
