fun edit removal; paralax removal

--- a/index.html
+++ b/index.html
@@ -85,21 +85,8 @@
           <hr>
           <p>
             ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen.
-            L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e da un personaggio anonimo,
-            se volete oscuro, grasso, unto, sudato, che non ha mai fatto uno sport in vita sua e che si getterebbe dall'ultimo
-            piano della Trump Tower piuttosto che svegliarsi alle 5 del mattino per andare a fare jogging, che si occupa della
-            sponsorizzazione del progetto.
-            <br>
-            <br>
-            Il Taijiquan è uno sport meraviglioso, adatto a giovani, adulti, bambini, vecchi - e se ci pagate - lo insegnamo pure a cani, gatti, animali da compagnia e ai pesci dell'acquario. 
-            Il praticante di Taijiquan (pronuncia 'Tai-scisciuàn') acquisisce nel tempo inestimabili benefici per il corpo e per lo spirito. 
-            In particolare il praticante avvertirà già dalle prime lezione una dilatazione di tutti i fori energetici principali, in particolare all'uscita energetica sfintero-rettale.
-            Inoltre, se coadiuvata dalla regolare assunzione di supposte di Bach, la pratica del Taijiquan garantisce una percentuale di radicali liberi al di sotto del 3%, e quindi fuori dal parlamento. 
-            <br>
-            <br>
-            In sintesi, o non esistono buone ragioni per non praticare Tai-scisciùan o sono scritte in dei libri, e allora non lo sapremo mai. 
-            <blockquote>  - Sun Tzu, 4999 BBC</blockquote> 
-            <img src="img/parenzo.jpg" width="250" alt="PENTITI PARENZOOOOOOOOOOOOOOOOOOOO">
+            L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
+
           </p>
 
           <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
