--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="ITKA PISA, corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
+  <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
   <meta name="author" content="Raffaele Spataro">
 
   <title>ITKA PISA</title>
