--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a href="#page-top">
-        <img src="img/itka.png" class="navbar-brand" alt="ITKA logo" width="90" height="90">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="img/itka.png" width="60" height="60" alt="fiwuk logo" class="img-fluid">
+
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,15 +86,21 @@
           <h2>Chi siamo</h2>
           <hr>
           <p>
-            ITKA PISA è un'assciazione sportiva amatoriale convenzionata con la sede nazionale ITKA e la scuola ITKA - Toscana Chen.
+            <strong>ITKA PISA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
-
           </p>
-
-          <img src="img/itka-dark.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
-          <img src="img/toscana.png" width="240" height="90" alt="fiwuk logo" class="img-fluid p-2 my-2">
-          <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
-          <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-2">
+          <a href="http://www.itkataiji.com/" target="_blank">
+            <img src="img/itka-dark.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-2">
+          </a>
+          <a href="http://www.toscanachen.it/" target="_blank">
+            <img src="img/toscana.png" width="240" height="90" alt="toscana chen logo" class="img-fluid p-2 my-2">
+          </a>
+          <a href="https://www.fiwuk.com/" target="_blank">
+            <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-2">
+          </a>
+          <a href="http://www.csen.it/" target="_blank">
+            <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-2">
+          </a>
         </div>
       </div>
     </div>
@@ -112,8 +119,8 @@
         secondo livello taijiquan ITKA e Allenatore II Duan di Taijiquan F.I.Wu.K.
         </p>
 
-        <a class="btn btn-default btn-lg" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
-          <i class="fa fa-level-down" aria-hidden="true"></i>
+        <a class="btn btn-default" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
+          <span class="fa fa-level-down" aria-hidden="true"></span>
         </a>
         <div class="collapse multi-collapse my-2" id="riconoscimenti">
           <div class="card card-body">
@@ -203,9 +210,9 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Contatti</h2>
           <hr class="my-4">
-          <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su
+          <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su:
             <br>
-            <a class="btn btn-default mt-4" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
+            <a class="btn btn-default mt-4 text-lowercase" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
                 <i class="fa fa-facebook" aria-hidden="true"></i>acebook
                 <i class="fa fa-external-link" aria-hidden="true"></i>
