--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+              <a class="nav-link" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
