--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="ITKA PISA, corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
+  <meta name="description" content="ITKA PISA, associazione sportiva del gruppo TOscana Chen. Corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
   <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
   <meta name="author" content="Raffaele Spataro">
 
@@ -90,7 +90,7 @@
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
           </p>
           <a href="http://www.itkataiji.com/" target="_blank">
-            <img src="img/itka-dark.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1">
+            <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1">
           </a>
           <a href="http://www.toscanachen.it/" target="_blank">
             <img src="img/toscana.png" width="240" height="90" alt="toscana chen logo" class="img-fluid p-1 my-1">
@@ -107,7 +107,7 @@
   </section>
 
   <!-- Maestro Section -->
-  <section id="maestro" class="maestro-section content-section text-center">
+  <section id="maestro" class="maestro-section content-section text-center" title="Gabriele Finocchiaro, il maestro">
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
@@ -138,7 +138,7 @@
   </section>
 
   <!-- Corsi Section -->
-  <section id="corsi" class="content-section text-center">
+  <section id="corsi" class="content-section text-center" title="I corsi offerti">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
@@ -204,7 +204,7 @@
   </section>
 
   <!-- Contacts Section -->
-  <section id="contacts">
+  <section id="contacts" title="Contatti">
     <div class="container content-section">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -219,19 +219,28 @@
               </strong>
             </a>
           </p>
-          <p class="mb-5">Contatta il maestro per scoprire il corso più adatto alle tue esigenze e iniziare subito ad allenarti! Le prime
-            lezioni sono gratuite e senza alcun impegno.</p>
+          <p class="my-5">Contatta personalmente il maestro per scoprire il corso più adatto alle tue esigenze e iniziare subito ad allenarti!
+            Le prime lezioni sono gratuite e senza alcun impegno.</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-4 ml-auto text-center">
-          <i class="fa fa-whatsapp fa-3x mb-3 sr-contact"></i>
+      <div class="row my-2">
+        <div class="col-lg-4 mx-auto my-1 text-center">
+          <i class="fa fa-whatsapp fa-3x sr-contact" aria-hidden="true"></i>
           <p>(+39) 348-523-3039</p>
         </div>
-        <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-envelope-o fa-3x my-2 sr-contact"></i>
+        <div class="col-lg-4 mx-auto my-1 text-center">
+          <i class="fa fa-facebook-official fa-3x sr-contact" aria-hidden="true"></i>
+
           <p>
-            <a href="mailto:your-email@your-domain.com">gfinocchiaro92@gmail.com</a>
+            <a href="https://www.facebook.com/gabriele.finocchiaro.1422?ref=br_rs" target="_blank">Gabriele Finocchiaro
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-lg-4 mx-auto my-1 text-center">
+          <i class="fa fa-envelope-o fa-3x sr-contact" aria-hidden="true"></i>
+          <p>
+            <a href="mailto:ygabriele.finocchiaro@hotmail.com">gabriele.finocchiaro@hotmail.com</a>
           </p>
         </div>
       </div>
