--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/animate.min.css">
 </head>
 
-<body id="page-top">
+<body id="page-top" itemscope itemType="http://schema.org/Organization">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="brand-heading ">ITKA PISA</h1>
+            <h1 class="brand-heading">ITKA PISA</h1>
             <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
             <a href="#about" class="btn btn-circle js-scroll-trigger p-1 animated pulse infinite">
               <i class="fa fa-angle-double-down"></i>
@@ -112,7 +112,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
         <hr>
-        <strong>Gabriele Finocchiaro</strong> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
+        <strong itemprop="funder">Gabriele Finocchiaro</strong> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
         Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
@@ -125,12 +125,12 @@
         <div class="collapse multi-collapse my-2" id="riconoscimenti">
           <div class="card card-body">
             <ul>
-              <li>Kuoshu, 3° classificato, campionati europei E.C.K.F., 2011</li>
-              <li>Tui Shou – piedi fissi, 1° classificato, mondiali W.T.K.A., 2012</li>
-              <li>Tui Shou – piedi fissi, 1° classificato // Tui Shou libero, 2° classificato // Tao Lou, 2° class. UNIFIED WORLD
+              <li itemprop="award">Kuoshu, 3° classificato, campionati europei E.C.K.F., 2011</li>
+              <li itemprop="award">Tui Shou – piedi fissi, 1° classificato, mondiali W.T.K.A., 2012</li>
+              <li itemprop="award">Tui Shou – piedi fissi, 1° classificato // Tui Shou libero, 2° classificato // Tao Lou, 2° class. UNIFIED WORLD
                 CHAMPIONSHIP W.T.K.A. 2014</li>
-              <li>Tao Lou mani nude, 1° class.; Tao Lou arma lunga, 1° class.; Campionati regionali W.T.K.A. 2015</li>
-              <li>Tao Lou 2° class. Coppa Italia F.I.Wu.K., 2018</li>
+              <li itemprop="award">Tao Lou mani nude, 1° class.; Tao Lou arma lunga, 1° class.; Campionati regionali W.T.K.A. 2015</li>
+              <li itemprop="award">Tao Lou 2° class. Coppa Italia F.I.Wu.K., 2018</li>
             </ul>
           </div>
         </div>
