--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
         <hr>
-        <strong itemprop="funder">Gabriele Finocchiaro</strong> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
+        <strong><span itemprop="founder">Gabriele Finocchiaro</strong></span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
         Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
