--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <strong>ITKA PISA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
           </p>
-          <a href="http://www.itkataiji.com/" target="_blank">
+          <a href="http://www.itkataiji.com/" target="_blank" itemprop="logo">
             <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1">
           </a>
           <a href="http://www.toscanachen.it/" target="_blank">
