--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
   <link href="css/grayscale.css" rel="stylesheet">
   <link rel="stylesheet" href="css/animate.min.css">
 </head>
+<script type="application/ld+json">
+  { "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "ITKA PISA",
+  "url": "http://www.itkapisa.it",
+  "logo": "http://www.itkapisa.it/img/itka.png",
+  "foundingDate": "2018",
+  "founders": [
+  {
+  "@type": "Person",
+  "name": "Gabriele Finocchiaro"
+  }],
+  "contactPoint": {
+  "@type": "ContactPoint",
+  "contactType": "customer support",
+  "telephone": "[+39-348-523-3039]",
+  "email": "gabriele.finocchiaro@hotmail.com"
+  },
+  "sameAs": [ 
+  "https://www.facebook.com/itkapisa/"
+  ]}
+ </script>
 
 <body id="page-top" itemscope itemType="http://schema.org/Organization">
 
@@ -102,7 +124,7 @@
             <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1">
           </a>
         </div>
-      </div>
+      </div>  
     </div>
   </section>
 
