--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   ]}
  </script>
 
-<body id="page-top" itemscope itemType="http://schema.org/Organization">
+<body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -111,7 +111,7 @@
             <strong>ITKA PISA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
           </p>
-          <a href="http://www.itkataiji.com/" target="_blank" itemprop="logo">
+          <a href="http://www.itkataiji.com/" target="_blank">
             <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1">
           </a>
           <a href="http://www.toscanachen.it/" target="_blank">
@@ -134,7 +134,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
         <hr>
-        <strong><span itemprop="founder">Gabriele Finocchiaro</strong></span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
+        <strong><span>Gabriele Finocchiaro</strong></span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
         Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
