--- a/index.html
+++ b/index.html
@@ -18,27 +18,28 @@
   <link rel="stylesheet" href="css/animate.min.css">
 </head>
 <script type="application/ld+json">
-  { "@context": "http://schema.org",
-  "@type": "Organization",
-  "name": "ITKA PISA",
-  "url": "http://www.itkapisa.it",
-  "logo": "http://www.itkapisa.it/img/itka.png",
-  "foundingDate": "2018",
-  "founders": [
   {
-  "@type": "Person",
-  "name": "Gabriele Finocchiaro"
-  }],
-  "contactPoint": {
-  "@type": "ContactPoint",
-  "contactType": "customer support",
-  "telephone": "[+39-348-523-3039]",
-  "email": "gabriele.finocchiaro@hotmail.com"
-  },
-  "sameAs": [ 
-  "https://www.facebook.com/itkapisa/"
-  ]}
- </script>
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "ITKA PISA",
+    "url": "http://www.itkapisa.it",
+    "logo": "http://www.itkapisa.it/img/itka.png",
+    "foundingDate": "2018",
+    "founders": [{
+      "@type": "Person",
+      "name": "Gabriele Finocchiaro"
+    }],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer support",
+      "telephone": "[+39-348-523-3039]",
+      "email": "gabriele.finocchiaro@hotmail.com"
+    },
+    "sameAs": [
+      "https://www.facebook.com/itkapisa/"
+    ]
+  }
+</script>
 
 <body id="page-top">
 
@@ -124,7 +125,7 @@
             <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1">
           </a>
         </div>
-      </div>  
+      </div>
     </div>
   </section>
 
@@ -134,8 +135,9 @@
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
         <hr>
-        <strong><span>Gabriele Finocchiaro</strong></span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro
-        Giovambattista Scavo dal 2007.
+        <strong>
+          <span>Gabriele Finocchiaro</strong>
+        </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
         secondo livello taijiquan ITKA e Allenatore II Duan di Taijiquan F.I.Wu.K.
