--- a/index.html
+++ b/index.html
@@ -148,13 +148,15 @@
         </a>
         <div class="collapse multi-collapse my-2" id="riconoscimenti">
           <div class="card card-body">
-            <ul>
-              <li itemprop="award">Kuoshu, 3° classificato, campionati europei E.C.K.F., 2011</li>
-              <li itemprop="award">Tui Shou – piedi fissi, 1° classificato, mondiali W.T.K.A., 2012</li>
-              <li itemprop="award">Tui Shou – piedi fissi, 1° classificato // Tui Shou libero, 2° classificato // Tao Lou, 2° class. UNIFIED WORLD
-                CHAMPIONSHIP W.T.K.A. 2014</li>
-              <li itemprop="award">Tao Lou mani nude, 1° class.; Tao Lou arma lunga, 1° class.; Campionati regionali W.T.K.A. 2015</li>
-              <li itemprop="award">Tao Lou 2° class. Coppa Italia F.I.Wu.K., 2018</li>
+            <ul style="text-align: left;">
+              <li itemprop="award">2011 - Kuoshu, Campionati europei E.C.K.F., 3° classificato</li>
+              <li itemprop="award">2012 - Tui Shou/piedi fissi, mondiali W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2014 - Tui Shou/piedi fissi, CHAMPIONSHIP W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2014 - Tui Shou libero, UNIFIED WORLD CHAMPIONSHIP W.T.K.A. 2° classificato</li>
+              <li itemprop="award">2014 - Tao Lou, UNIFIED WORLD CHAMPIONSHIP W.T.K.A., 2° classificato </li>
+              <li itemprop="award">2015 - Tao Lou mani nude, Campionati regionali W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2015 - Tao Lou arma lunga, Campionati regionali W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2018 - Tao Lou Coppa Italia F.I.Wu.K., 2° classificato</li>
             </ul>
           </div>
         </div>
