--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <div class="card card-body">
             <ul style="text-align: left;">
               <li itemprop="award">2011 - Kuoshu, Campionati europei E.C.K.F., 3° classificato</li>
-              <li itemprop="award">2012 - Tui Shou/piedi fissi, mondiali W.T.K.A., 1° classificato</li>
-              <li itemprop="award">2014 - Tui Shou/piedi fissi, CHAMPIONSHIP W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2012 - Tui Shou piedi fissi, mondiali W.T.K.A., 1° classificato</li>
+              <li itemprop="award">2014 - Tui Shou piedi fissi, CHAMPIONSHIP W.T.K.A., 1° classificato</li>
               <li itemprop="award">2014 - Tui Shou libero, UNIFIED WORLD CHAMPIONSHIP W.T.K.A. 2° classificato</li>
               <li itemprop="award">2014 - Tao Lou, UNIFIED WORLD CHAMPIONSHIP W.T.K.A., 2° classificato </li>
               <li itemprop="award">2015 - Tao Lou mani nude, Campionati regionali W.T.K.A., 1° classificato</li>
