--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; ITKA PISA 2018</p>
+      <p>Copyright &copy; Raffaele Spataro 2018</p>
     </div>
   </footer>
 
